feat: modify statistics enpoints
